--- a/src/app/(side-nav)/getting-started/installation/page.mdx
+++ b/src/app/(side-nav)/getting-started/installation/page.mdx
@@ -1,3 +1,6 @@
-# Installation Section
+import styles from '@/styles/markdown.module.scss';
+import Content from './content.mdx';
 
-## Work in Progress
+<div className={styles.container}>
+  <Content />
+</div>
