--- a/src/app/(side-nav)/foundations/colors/page.mdx
+++ b/src/app/(side-nav)/foundations/colors/page.mdx
@@ -1,3 +1,9 @@
-# Colors Section
+import styles from '@/styles/markdown.module.scss';
+import Content from './content.md';
+import { ColorVariants } from './color-variants';
 
-## Work in Progress
+<div className={styles.container}>
+  <Content />
+</div>
+
+<ColorVariants />
