feat: improve docs usage with more component documentation

--- a/src/app/(side-nav)/foundations/colors/page.mdx
+++ b/src/app/(side-nav)/foundations/colors/page.mdx
@@ -4,6 +4,7 @@ import { ColorVariants } from './color-variants';
 
 <div className={styles.container}>
   <Content />
+  <div className={styles.moreInfo}>
+    <ColorVariants />
+  </div>
 </div>
-
-<ColorVariants />
