--- a/src/app/(side-nav)/getting-started/installation/content.mdx
+++ b/src/app/(side-nav)/getting-started/installation/content.mdx
@@ -4,19 +4,19 @@ import { CodeBlockSection } from '@/components/CodeBlock';
 
 ## Installation Guide
 
-Integrate the `@arctic-kit/snow` library into your project by following these steps. This guide covers installation via both `yarn` and `npm`, setting up fonts, configuring styles, and using a component.
+Integrate the `@arctic-kit/snow` library into your project by following these steps. This guide covers installation via both `yarn` and `npm`, configuring styles, setting up fonts, and using a component.
 
 ### 1. Install
 
-Choose your preferred package manager to install the library.
+Choose your preferred package manager to install the library along with the dependent libraries.
 
 - **Using Yarn:**
 
-<CodeBlockSection>{`yarn add @arctic-kit/snow`}</CodeBlockSection>
+<CodeBlockSection>{`yarn add @arctic-kit/snow @floating-ui/react @pigment-css/react framer-motion`}</CodeBlockSection>
 
 - **Using NPM:**
 
-<CodeBlockSection>{`npm install @arctic-kit/snow`}</CodeBlockSection>
+<CodeBlockSection>{`npm install @arctic-kit/snow @floating-ui/react @pigment-css/react framer-motion`}</CodeBlockSection>
 
 ### 2. Fonts Setup
 
@@ -34,25 +34,100 @@ To ensure the components render correctly, include the necessary font files in y
 
 - **Import Fonts in Your Styles:**
 
-  In your project's main stylesheet or root file (like `index.ts` for Vite), add the following imports:
+  In your project's main stylesheet or root file (like `main.ts` for Vite or `layout.tsx` for Next.js), add the following imports:
 
   <FontImportStep />
 
 ### 3. Configuration
 
-Import the primary stylesheet to apply the default styles provided by `@arctic-kit/snow`. The method varies based on your project setup:
+#### **For Vite:**
 
-- **For Vite:**
+- Install `@pigment-css/vite-plugin` as a development dependency:
 
-  In your `main.js` or equivalent entry file, add:
+  <CodeBlockSection>{`yarn add -D @pigment-css/vite-plugin`}</CodeBlockSection>
 
-  <CodeBlockSection>{`import '@arctic-kit/snow/style.css';`}</CodeBlockSection>
+- Then in your `vite.config.ts`, set up the following configuration:
 
-- **For Next.js:**
+<CodeBlockSection>
+{
+`
+import { defineConfig } from 'vite';
+import react from '@vitejs/plugin-react';
+import { extendTheme, pigment } from '@pigment-css/vite-plugin';
+import { createDefaultTheme } from '@arctic-kit/snow';
 
-  In your `pages/_app.js` or `pages/_app.tsx`, include:
+const defaultTheme = createDefaultTheme();
+const theme = extendTheme({
+...defaultTheme,
+cssVarPrefix: 'snow',
+});
 
-  <CodeBlockSection>{`import '@arctic-kit/snow/style.css';`}</CodeBlockSection>
+export default defineConfig({
+  plugins: [
+    pigment({
+      theme,
+    }),
+    react(),
+  ],
+});
+`}
+
+</CodeBlockSection>
+
+- In your root file (e.g., `main.ts`), add:
+
+<CodeBlockSection>
+{
+`
+  
+import '@pigment-css/react/styles.css';
+import '@arctic-kit/snow/style.css';
+
+`
+}
+
+</CodeBlockSection>
+
+#### **For Next.js (App Router):**
+
+- Install the required dependencies:
+
+  <CodeBlockSection>{`yarn add @pigment-css/nextjs-plugin`}</CodeBlockSection>
+
+- In your `next.config.mjs`, configure the following:
+
+<CodeBlockSection>
+{
+`
+import { withPigment, extendTheme } from '@pigment-css/nextjs-plugin';
+import { createDefaultTheme } from '@arctic-kit/snow';
+
+const defaultTheme = createDefaultTheme();
+const theme = extendTheme({
+...defaultTheme,
+cssVarPrefix: 'snow',
+});
+
+export default withPigment({...nextConfig}, {
+    theme,
+  });
+`}
+
+</CodeBlockSection>
+
+- In your root layout file (e.g., `layout.tsx`), add:
+
+<CodeBlockSection>
+{
+`
+  
+import '@pigment-css/react/styles.css';
+import '@arctic-kit/snow/style.css';
+
+`
+}
+
+</CodeBlockSection>
 
 ### 4. Using a Component
 
@@ -62,4 +137,4 @@ Once installed and configured, you can start using components from the library. 
 
 ---
 
-By following these steps, you should have `@arctic-kit/snow` seamlessly integrated into your project. For more detailed information and advanced configurations, refer to the [official documentation](https://github.com/arctic-kit/snow).
+By following these steps, you should have `@arctic-kit/snow` seamlessly integrated into your Next.js or Vite project. For more detailed information and advanced configurations, refer to the [official documentation](https://github.com/arctic-design/arctic-kit).
