feat: provide acknowledgment to @heroicons

--- a/src/app/(side-nav)/foundations/icons/content.mdx
+++ b/src/app/(side-nav)/foundations/icons/content.mdx
@@ -5,3 +5,5 @@ The Arctic Design Kit leverages the `@arctic-kit/icons` package for all icon-rel
 By default, the icons in this package are outline icons and come with a `className` of `"arctic-icon-medium"`, making it simple to apply common styles like width and height through global CSS rules. For example, the icons displayed below have a global width of 24px.
 
 If you prefer solid icons, you can easily import them from `@arctic-kit/icons/solid`. When using solid icons, the `className` will be `"arctic-icon-medium solid"` to maintain consistency while differentiating the icon styles.
+
+**Acknowledgment:** The icons integrated into the Arctic Design Kit are sourced from <a href="https://heroicons.com" target="_blank" rel="noopener noreferrer">`@heroicons`</a>, with both solid and outline variants standardized at a 24px size.
