feat: show the additional colors from `@arctic-kit/colors` package

--- a/src/app/(side-nav)/foundations/colors/page.mdx
+++ b/src/app/(side-nav)/foundations/colors/page.mdx
@@ -1,10 +1,14 @@
 import styles from '@/styles/markdown.module.scss';
 import Content from './content.md';
 import { ColorVariants } from './color-variants';
+import { ColorShades } from './ColorShades';
 
 <div className={styles.container}>
   <Content />
   <div className={styles.moreInfo}>
     <ColorVariants />
+  </div>
+  <div className={styles.moreInfo}>
+    <ColorShades />
   </div>
 </div>
